--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/IMG_2474_jpg.jpg" style="width:280px; height:280px; object-fit: cover;">
+								<img src="images/abhinav_jindal.jpg" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
