--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: asj59@cornell.edu</b> 
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Address: 424, Space Sciences Building, Cornell University, Ithaca, NY 14853.</b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
@@ -170,25 +170,25 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter">
+									<a href="https://twitter.com/abjin1994" class="icon fa-twitter">
 										<span class="label">Twitter</span>
 									</a>
 								</li>
 								<!-- The Facebook icon -->
-								<li>
+								<!-- <li>
 									<a href="#" class="icon fa-facebook">
 										<span class="label">Facebook</span>
 									</a>
-								</li>
+								</li>-->
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram">
+									<a href="https://www.instagram.com/abhinavjindal93/" class="icon fa-instagram">
 										<span class="label">Instagram</span>
 									</a>
 								</li>
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/abhinavjindal93" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
